# easy-diagrams

./: .env.template  .gitignore  .pre-commit-config.yaml  Design.rst  Dockerfile  Dockerfile.plantuml  FOLDER_FEATURE_SUMMARY.md  README.rst  compose.yml  dodo.py  heroku.yml  pyproject.toml
.github/workflows/: python-app.yml
easy_diagrams/: __init__.py  exceptions.py  interfaces.py  routes.py  security.py
easy_diagrams/alembic/: env.py
easy_diagrams/config/: development.ini  nginx.conf  production.ini  supervisord.conf
easy_diagrams/domain/: diagram.py  folder.py  organization.py
easy_diagrams/models/: __init__.py  diagram.py  folder.py  organization.py  user.py
easy_diagrams/services/: __init__.py  diagram_renderer.py  diagram_repo.py  folder_repo.py  oauth.py  organization_repo.py
easy_diagrams/templates/: 403.pt  404.pt  diagram.pt  diagram_builtin.pt  diagrams.pt  home.pt  image.pt  layout.pt  login.pt  organization_detail.pt  organization_edit.pt  organizations.pt  select_organization.pt
easy_diagrams/views/: __init__.py  auth.py  diagrams.py  home.py  notfound.py  organization.py  organizations.py
tests/: conftest.py
tests/e2e/: conftests.py  test_create_diagram.py  test_diagram_listing.py  test_folder_navigation.py  test_organization_management.py
tests/functional/: conftest.py  test_auth.py  test_diagrams.py  test_folders.py  test_home.py  test_organization.py
tests/integrational/: conftest.py  test_diagram_orm.py  test_diagram_repository.py  test_folder_repository.py  test_organization_orm.py  test_organization_repository.py  test_organization_views.py  test_user_orm.py
tests/unit/: conftest.py  test_auth_views.py  (+4 more)
(+22 files in other folders)
